# trajmod

./: .gitignore  CATALOG_FORMAT_GUIDELINES.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproj.toml  pyproject.toml  requirements.txt
config/: config.py
src/trajmod/: __init__.py  example.py  visualization.py
src/trajmod/config/: __init__.py  modelconfig.py
src/trajmod/design/: __init__.py  matrix.py
src/trajmod/events/: __init__.py  amplitude_threshold_selector.py  event_selection.py  events.py
src/trajmod/events/catalogs/: __init__.py  base.py  catalog_fetcher.py  isc.py  jma.py  nied.py  usgs.py  utils.py  validation.py
src/trajmod/model/: __init__.py  model.py  model_selection.py  results.py  uncertainty_quantification.py
src/trajmod/preprocessing/: __init__.py  geodetic_utils.py  preprocessing.py  time_utils.py
src/trajmod/strategies/: __init__.py  fitting.py
src/trajmod/templates/: __init__.py  templates.py
