[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trajmod"
version = "0.1.0"
description = "Simple GNSS trajectory modeling"
authors = [{name = "Giuseppe Costantino"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

keywords = ["GNSS", "geodesy", "trajectory", "postseismic", "time-series"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
    "scikit-learn>=1.0",
    "pyproj>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.950",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/gcostantino/trajmod"
Documentation = "https://github.com/gcostantino/trajmod#readme"
Repository = "https://github.com/gcostantino/trajmod"
"Bug Tracker" = "https://github.com/gcostantino/trajmod/issues"


#[tool.setuptools]
#packages = ["trajmod"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "trajmod.__version__"}